# advent-code

./: .gitignore  Cargo.toml  README.md  init_day.sh  main_template.rs
advent/: .gitignore  Cargo.toml
advent/src/: cpu.rs  grid.rs  lib.rs  map.rs  snake.rs
day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml  joystick_input
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day3/: Cargo.toml  output
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: .test_input.swp  Cargo.toml
day5/src/: '  main.rs  test
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs  part_2.rs
day8/: Cargo.toml
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
src/: init_day.sh  main.rs
src/day1/: part1.rs  part2.rs
src/day10/: part1.rs  part2.rs
src/day11/: part1.rs  part2.rs  question
src/day12/: part1.rs  part2.rs
src/day13/: part1.rs  part2.rs
src/day14/: knothash.rs  part1.rs  part2.rs
src/day15/: .part1.rs.swp  .part2.rs.swp  part1.rs  part2.rs
src/day16/: part1.rs  part2.rs
src/day17/: part1.rs  part2.rs
src/day18/: part1.rs  part2.rs  question
src/day19/: part1.rs  part2.rs
src/day2/: part1.rs  part2.rs
src/day20/: part1.rs  part2.rs
src/day3/: mod.rs  part1.rs  part1_2.rs  part2.rs
src/day4/: part1.rs  part2.rs
src/day5/: part1.rs  part2.rs
src/day6/: part1.rs  (+1 more)
(+6 files in other folders)
