[package]
name = "day14"
version = "0.1.0"
authors = ["Josh Resch <joshresch.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
log = "0.4"
env_logger = "0.8"
regex = "1"
byteorder = "1"
bit-vec = "0.6"

[dependencies.advent]
path = "../advent"
