[package]
name = "day7"
version = "0.1.0"
authors = ["Josh Resch <jrresch@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
env_logger = "0.5"

[dependencies.advent]
path = "../advent"
